<resources>
    <string name="app_name">ContactsProject</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="delete">Delete</string>
    <string name="_999_999_9999">999.999.9999</string>
    <string name="scott_shaper">Scott Shaper</string>
</resources>